# ocaml-mcp

./: API_CONTRACT_TEST_REPORT.md  EMPIRICAL_VALIDATION.md  FAILING_TESTS_SPECIFICATION.md  PR_3_COMPREHENSIVE_REVIEW.md  SECURITY_FIX_REPORT.md  TDD_GREEN_PHASE_QUALITY_REPORT.md  TEST_EXECUTION_GUIDE.md  THREADING_DEBUG_ANALYSIS.md  TOKEN_VALIDATION_SUMMARY.md  api_contract_demo.cmi  api_contract_demo.cmo  debug_test  debug_test.cmi  debug_test.cmo  demo_token_counting.ml  dune-project  final_tdd_analysis.md  green_phase_test_simulation.ml  ocaml-platform-sdk.opam  run_tests.sh  test_green_simple.ml  test_green_verification.ml  test_implementation_features.ml  test_json_integration.cmi  test_json_integration.cmo  test_minimal.cmi  test_minimal.cmo  test_schemas  validate_token_counts.ml
.spec-workflow/approvals/ocaml-mcp-npx-wrapper/: approval_1755191223243_4q55q4twt.json  approval_1755191857108_w4roorws3.json  approval_1755192874188_1hory5kvq.json
.spec-workflow/specs/ocaml-mcp-npx-wrapper/: design.md  jest-setup-test-spec.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
docs/: token_validation_methodology.md
examples/async-weather-server/: async_weather_server.ml
examples/weather-server/: weather_server.ml
lib/: dune_describe.ml
lib/mcp-eio/: connection.mli  framing.ml  framing.mli  mcp_eio.ml  mcp_eio.mli  transport.mli  transport_http.ml.disabled  transport_http.mli  transport_http.mli.disabled  transport_socket.ml  transport_socket.mli  transport_stdio.ml  transport_stdio.mli
lib/ocaml-mcp-server/: build_types.ml  build_types.mli  diagnostic_classification.ml  diagnostic_classification.mli  diagnostic_stream.ml  diagnostic_stream.mli  dune  file_utils.ml  file_utils.mli  ocaml_mcp_server.ml  ocaml_mcp_server.mli  testing_support.ml  testing_support.mli  token_calibration.ml  token_counting.ml  token_counting.mli  token_validator_placeholder.ml  token_validator_simple.ml
lib/ocaml-mcp-server/tools/: build_status.ml  build_target.ml  eval.ml  fs_write.ml  project_structure.ml
npx-wrapper/: .eslintrc.cjs  .gitignore  .npmignore  .prettierignore  .prettierrc.json  INTEGRATION_TESTS_SUMMARY.md  LICENSE  README.md  TESTING.md  TROUBLESHOOTING.md  jest.config.cjs  ocaml-mcp-server-0.1.0.tgz  package-lock.json  package.json
npx-wrapper/__tests__/: integration.test.js  setup.test.js
npx-wrapper/coverage/: argument-parser.js.html  coverage-final.json  index.html  index.js.html  lcov.info  ocaml-mcp-server.js.html  project-detector.js.html
npx-wrapper/coverage/lcov-report/: argument-parser.js.html  index.html  index.js.html  ocaml-mcp-server.js.html  project-detector.js.html
npx-wrapper/coverage/lcov-report/lib/: argument-parser.js.html  binary-executor.js.html  config-generator.js.html  error-handler.js.html  index.html  index.js.html  opam-manager.js.html  project-detector.js.html
npx-wrapper/coverage/lib/: argument-parser.js.html  binary-executor.js.html  config-generator.js.html  error-handler.js.html  index.html  index.js.html  opam-manager.js.html  project-detector.js.html
npx-wrapper/lib/: argument-parser.js  binary-executor.js  config-generator.js  error-handler.js  index.js  opam-manager.js  project-detector.js
npx-wrapper/lib/__tests__/: argument-parser.test.js  binary-executor.test.js  config-generator.test.js  error-handler.test.js  opam-manager.test.js  project-detector.test.js
test/: performance_validation  performance_validation.cmi  performance_validation.cmo  performance_validation.ml
test/cram/build-status-limits.t/: run.t  schema-validation.t  simple-limits.t
test/cram/build-status.t/: run.t
test/unit/: dune  run_comprehensive_api_tests.ml  run_production_api_validation.ml  test_api_contract_comprehensive.ml  test_build_status_json_contract.cmi  test_build_status_json_contract.cmo  test_build_status_json_contract.ml  test_build_status_limits.cmi  test_build_status_limits.cmo  test_build_status_limits.ml  test_build_status_limits_refactor  test_build_status_schemas  test_build_status_schemas.cmi  test_build_status_schemas.ml  test_contract_validation.ml  test_json_api_fixes.cmi  test_json_api_fixes.cmo  test_json_api_fixes.ml  test_load_testing.ml  test_performance_load.ml  test_production_api_contract.ml  test_security_chaos.ml  test_security_resilience.ml  test_simple_api_contract.ml  test_token_validation.ml
